syntax = "proto3";

package rs.jage.instrument;

import "span.proto";
import "log.proto";

service Instrument {
   rpc record_span(RecordSpanRequest) returns (RecordSpanResponse) {}

   rpc record_event(RecordEventRequest) returns (RecordEventResponse) {}
}

message RecordSpanRequest {
    span.Span span = 1;
}

message RecordEventRequest {
    log.Log log = 1;
}

message RecordSpanResponse {}

message RecordEventResponse {}